Updated selection height to avoid introduction of scrollbars.

--- a/Resources/styles/style.css
+++ b/Resources/styles/style.css
@@ -59,7 +59,7 @@ body
 .page-container
 {
 	display: grid;
-	grid-template-rows: 10% min-content 1fr 20%;
+	grid-template-rows: 10% min-content 1fr minmax(15%, min-content);
 	grid-template-columns: 5fr 1fr;
 	width: 100%;
 	height: 100%;
